--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,22 +9,36 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.tartiflette.MainActivity">
 
+    <!--
     <Button
-        android:id="@+id/button_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:text="@string/button_main"
+        android:id="@+id/button_main"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:onClick="launchSecondActivity"
-        android:text="Send" />
+        android:layout_alignParentEnd="true"
+        android:onClick="launchSecondActivity"/>
+    -->
 
-    <EditText
-        android:id="@+id/editText_main"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/button_main"
-        android:layout_toStartOf="@+id/button_main"
         android:layout_alignParentBottom="true"
-        android:hint="@string/editText_main" />
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="12dp"
+        android:layout_marginRight="12dp"
+        android:elevation="2dp"
+        android:src="@android:drawable/ic_menu_add" />
+
+
 </RelativeLayout>
+
+
