--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,8 +10,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.tartiflette.MainActivity">
 
-    <!--
-    <Button
+    <!-- LinearLayout me permet d'ajouter mon Imageview -->
+
+    <!-- <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_main"
@@ -25,16 +27,16 @@
         android:id="@+id/my_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"
+        tools:itemCount="12"
+        tools:listitem="@layout/recycler_view_item" />
 
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="12dp"
         android:layout_marginRight="12dp"
+        android:layout_marginBottom="12dp"
         android:elevation="2dp"
         android:src="@android:drawable/ic_menu_add" />
 
