--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -11,13 +11,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".SecondActivity">
 
-    <com.master.glideimageview.GlideImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/glideImageView"
-        android:layout_centerInParent="true"
-        android:scaleType="centerCrop"
-        />
 
     <TextView
         android:id="@+id/Signe"
@@ -32,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_below="@+id/Signe"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold" />
 
@@ -40,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_below="@+id/dateDebut"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold" />
 
