--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -9,8 +9,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".SecondActivity">
+    tools:context=".SecondActivity"
+    android:background="@drawable/nuage">
 
+    <!--<ImageView
+        android:layout_width="70dp"
+        android:layout_height="" />-->
 
     <TextView
         android:id="@+id/Signe"
@@ -37,5 +41,15 @@
         android:layout_below="@+id/dateDebut"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/Description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_below="@+id/dateFin"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textStyle="bold" />
+
 
 </RelativeLayout>
