--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -2,8 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:padding="6dip" >
+    android:padding="6dip"
 
+    >
+
+    <!-->android:background="@drawable/ic_launcher_background"<-->
     <ImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
